[package]
name = "min_shark"
version = "0.6.0"
edition = "2021"
authors = ["Dov Reshef <reshef.dov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A crate to parse and match a subset of the wireshark filter display language"
readme = "README.md"
keywords = ["tshark", "wireshark", "filter"]
categories = ["parsing", "command-line-interface", "network-programming"]
documentation = "https://docs.rs/min_shark"
repository = "https://github.com/dovreshef/min_shark"
exclude = [
    ".github/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.11"
regex = "1.11.1"
derive_more = { version = "1.0.0", features = ["full"] }
ipnet = "2.10.1"
memchr = "2.7.4"

[dev-dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
